--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,4 +2,6 @@
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
   }
+  
+  "postCreateCommand": "pip install pandasql",
 }
