--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+*.pyc
 # C extensions
 *.so
 
@@ -127,4 +127,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+__pycache__/fn_rank2.cpython-310.pyc
 __pycache__/fn_rank2.cpython-310.pyc
